--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,18 @@
-# ─────────────────────────────────────────────────────────────
-#  Hallucination Detection Framework – Environment Variables
-# ─────────────────────────────────────────────────────────────
-# 1. Copy this file to .env
-# 2. Replace the placeholder with your real OpenAI API key
-# 3. Never commit .env to version control
+# ═══════════════════════════════════════════════════════
+# Truthy — Environment Variables
+# Copy this file to .env for local development
+# ═══════════════════════════════════════════════════════
 
-OPENAI_API_KEY=sk-YOUR_KEY_HERE
+# ── REQUIRED for Free Mode ──────────────────────────────
+# Groq gives you Llama 3.1 8B for FREE (14,400 req/day)
+# Get your key at: https://console.groq.com
+GROQ_API_KEY=gsk_your_groq_key_here
+
+# ── OPTIONAL: Brave Search (best real-time web context) ─
+# Free tier: 2,000 searches/month
+# Get key at: https://api.search.brave.com
+BRAVE_API_KEY=your_brave_api_key_here
+
+# ── Users provide these themselves in the UI ────────────
+# OPENAI_API_KEY=sk-...      (not needed server-side)
+# GEMINI_API_KEY=AIza...     (not needed server-side)
