--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,14 @@
-# render.yaml — Render.com deployment configuration
 services:
   - type: web
-    name: hallucination-detector
+    name: truthy-hallucination-detector
     runtime: python
     buildCommand: pip install -r requirements.txt
     startCommand: uvicorn api:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
         value: "3.11.0"
+      - key: GROQ_API_KEY
+        sync: false   # Set this manually in Render dashboard
+      - key: BRAVE_API_KEY
+        sync: false   # Optional — set manually in Render dashboard
     autoDeploy: true
